# brumski_py

./: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py  brumski_py.h.in  setup.py
ascii/: CMakeLists.txt  __init__.py
ascii/src/: name.cpp
docs/ascii/: ascii.md
docs/maths/: area2dshapes.md  derivatives.md  integration.md
include/brumski_py/ascii/: name.hpp
include/brumski_py/math/: area2dshapes.hpp  derivatives.hpp  grade_calculator.hpp  integration.hpp
include/brumski_py/school/: cgpa.hpp
math/area2dshapes/: __init__.py  area2dshapes.cpp
math/derivatives/: derivatives.cpp
math/grade_calculator/: CMakeLists.txt  __init__.py  grade_calculator.cpp
math/integration/: CMakeLists.txt  __init__.py  integration.cpp
maths/: __init__.py
maths/area2dshapes/: CMakeLists.txt
maths/derivatives/: CMakeLists.txt  __init__.py
maths/grade_calculator/: grade_calculator.cpp
maths/integration/: integration.cpp
school/: __init__.py
school/cgpa/: CMakeLists.txt  __init__.py  cgpa.cpp  grade_calculator.hpp
src/: brumski_py.cpp
src/ascii/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp  N.cpp  O.cpp  P.cpp  Q.cpp  R.cpp  S.cpp  SPACE.cpp  T.cpp  U.cpp  V.cpp  W.cpp  X.cpp  Y.cpp  Z.cpp  boolean_functions.cpp  name.cpp
src/math/: area2dshapes.cpp  derivatives.cpp  grade_calculator.cpp  integration.cpp
src/school/: cgpa.cpp
